--- a/benjamin/package.json
+++ b/benjamin/package.json
@@ -2,7 +2,7 @@
   "name": "benjamin",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Kerby00.github.io/BenK-Portfolio/",
+  "homepage": "https://Kerby00.github.io/BenK-Portfolio/AboutMe",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
